--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet.markercluster": "^1.1.0",
     "leaflet.vectorgrid": "^1.2.0",
     "masonry-layout": "^4.1.1",
+    "nouislider": "^11.1.0",
     "packery": "^2.1.1",
     "proj4leaflet": "^1.0.1",
     "promise-polyfill": "^6.0.2",
